[tool.poetry]
name = "pysnmpcrypto"
version = "0.1.0"
description = ""
authors = ["Riccardo Pittau <elfosardo@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pycryptodomex = "^3.17"
cryptography = "^40.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
